--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.datasource.password=1234
 ###############################
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.type.descriptor.sql=trace 
 
 ###############################
 # 자동 갱신
